--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <div class="home__data">
                     <h1 class="home__title">Hola, soy Raúl</h1>
                     <h3 class="home__subtitle">Full Stack Developer</h3>
-                    <p class="home__description">Como Full Stack Developer, tengo experiencia en el desarrollo tanto del frontend como del backend de aplicaciones web, utilizando herramientas como React, Node.js y MongoDB. <br> <br>Mi principal motivación está en lograr que cada proyecto sea desarrollado de manera integral, integrando todas sus partes de manera eficiente y efectiva.</p>
+                    <!-- <p class="home__description">Como Full Stack Developer, tengo experiencia en el desarrollo de aplicaciones web, utilizando herramientas como React, Node.js y MongoDB. <br> <br>Mi principal motivación está en lograr que cada proyecto sea desarrollado de manera integral, integrando todas sus partes de manera eficiente y efectiva.</p> -->
                     <a href="#about" class="button">
                         <i class='uil uil-user button__icon'></i>
                         Sobre mí.
