--- a/index.html
+++ b/index.html
@@ -67,13 +67,11 @@
                     </div>
                 </div>
 
-                <img src="assets/home-img.png" alt="" class="home__img">
 
                 <div class="home__container-data">
                 <div class="home__data">
                     <h1 class="home__title">Hola, soy Raúl</h1>
                     <h3 class="home__subtitle">Full Stack Developer</h3>
-                    <!-- <p class="home__description">Como Full Stack Developer, tengo experiencia en el desarrollo de aplicaciones web, utilizando herramientas como React, Node.js y MongoDB. <br> <br>Mi principal motivación está en lograr que cada proyecto sea desarrollado de manera integral, integrando todas sus partes de manera eficiente y efectiva.</p> -->
                     <a href="#about" class="button">
                         <i class='uil uil-user button__icon'></i>
                         Sobre mí.
@@ -97,7 +95,7 @@
 
                 <div class="about__data">
                     <h3 class="about__heading">Hola, soy Raúl Ochoa</h3>
-                    <p class="about__description">Un desarrollador Full Stack de Venezuela. Me especializo en el stack MERN y mi enfoque principal es el frontend. <br> <br>Mi pasión por la tecnología comenzó desde muy joven y me llevó a explorar diferentes lenguajes de programación y tecnologías. Actualmente, estoy en proceso de graduarme en Derecho, lo que me ha ayudado a desarrollar habilidades analíticas y de resolución de problemas que aplico en mi carrera como desarrollador. <br><br> Mi objetivo como desarrollador es crear aplicaciones web atractivas, eficientes y escalables, que brinden soluciones efectivas a problemas reales. Mi experiencia en el stack MERN me permite abordar proyectos de manera integral y brindar soluciones completas a los problemas.<br><br>¡Gracias por visitar mi sitio web! Si estás buscando un desarrollador Full Stack para tu proyecto, no dudes en contactarme.</p>
+                    <p class="about__description">Un desarrollador Full Stack de Venezuela. Tengo experiencia en el desarrollo tanto del frontend como del backend de aplicaciones web, utilizando herramientas como React, Node.js y MongoDB. <br> <br>Mi pasión por la tecnología comenzó desde muy joven y me llevó a explorar diferentes lenguajes de programación y tecnologías. Actualmente, estoy en proceso de graduarme en Derecho, lo que me ha ayudado a desarrollar habilidades analíticas y de resolución de problemas que aplico en mi carrera como desarrollador. <br><br> Mi objetivo como desarrollador es crear aplicaciones web atractivas, eficientes y escalables, que brinden soluciones efectivas a problemas reales. Mi experiencia en el stack MERN me permite abordar proyectos de manera integral y brindar soluciones completas a los problemas.<br><br>¡Gracias por visitar mi sitio web! Si estás buscando un desarrollador Full Stack para tu proyecto, no dudes en contactarme.</p>
                     <a href="#contact" id="contact" class="button" class="uil uil-navigator button__icon">Contáctame</a>
                 </div>
             </div>
@@ -130,7 +128,7 @@
                         <i class="uil uil-server-network skills__icon"></i>
 
                         <div>
-                            <h1 class="skills__title">Backend developer</h1>
+                            <h1 class="skills__title">Backend Developer</h1>
                         </div>
 
                         <i class="uil uil-angle-down skills__arrow"></i>
@@ -157,6 +155,16 @@
                             <div class="skills__data">
                                 <div class="skills__titles">
                                     <h3 class="skills__name">CSS</h3>
+                                </div>
+
+                                <div class="skills__bar">
+                                    <span class="skills__percentage" style="width: 100%"></span>
+                                </div>
+                            </div>
+
+                            <div class="skills__data">
+                                <div class="skills__titles">
+                                    <h3 class="skills__name">Tailwind CSS</h3>
                                 </div>
 
                                 <div class="skills__bar">
@@ -228,131 +236,60 @@
         <section class="work section" id="work">
             <h2 data-heading="Mi portafolio" class="section__title">Trabajos recientes</h2>
 
-            <div class="work__filters">
-                <span class="work__item active-work">All</span>
-                <span class="work__item" data-filter="">Web</span>
-                <span class="work__item" data-filter="">App</span>
-                <span class="work__item" data-filter="">Design</span>
-            </div>
 
             <div class="work__container container grid">
                 <div class="work__card">
-                    <img src="/assets/work-1.webp" alt="" class="work__img">
-                    <h3 class="work__title">Web Design</h3>
+                    <img src="/assets/real-state.png" alt="" class="work__img">
+                    <h3 class="work__title">Real State App - Website</h3>
                     <span class="work__button">Demo
                         <i class="uil uil-arrow-right work__button-icon"></i>
                     </span>
                     <div class="portfolio__item-details">
-                        <h3 class="details__title">The services provide for design</h3>
-                        <p class="details__description">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                            Excepturi tempora accusamus atque.</p>
+                        <h3 class="details__title">Real State App - Website</h3>
+                        <p class="details__description">La aplicación permite a los usuarios buscar, explorar y ver detalles de diferentes propiedades, incluyendo fotos, precio ytipo de propieda. Los usuarios pueden filtrar sus búsquedas por diferentes criterios, como precio y tipo de propiedad.</p>
                         <ul class="details__info">
-                            <li>Created - <span>4 dec 2020</span></li>
-                            <li>Technologies - <span>html css</span></li>
-                            <li>Role - <span>frontend</span></li>
-                            <li>Vie - <span><a href="#">www.domain.com</a></span></li>
+                            <li>Tecnologías - <span>HTML, CSS, tailwind CSS, JavaScript, ReactJS</span></li>
+                            <li>Demo - <span><a href="https://real-state-raul.vercel.app/" target="_blank"> Click aquí.</a></span></li>
                         </ul>
                     </div>
 
                 </div>
 
                 <div class="work__card">
-                    <img src="/assets/work-2.webp" alt="" class="work__img">
-                    <h3 class="work__title">App Desgin</h3>
+                    <img src="/assets/weather-app.png" alt="" class="work__img">
+                    <h3 class="work__title">Simple Weather App</h3>
                     <span class="work__button">Demo
                         <i class="uil uil-arrow-right work__button-icon"></i>
                     </span>
                     <div class="portfolio__item-details">
-                        <h3 class="details__title">Mobile app landing design & app maintain</h3>
-                        <p class="details__description">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                            Excepturi tempora accusamus atque.</p>
+                        <h3 class="details__title">Simple Weather App</h3>
+                        <p class="details__description">Una aplicación del clima con la interfaz de usuario minimalista y fácil de usar, con una presentación clara y concisa de los datos meteorológicos, como la temperatura actual, la presión atmosférica y la humedad.</p>
                         <ul class="details__info">
-                            <li>Created - <span>4 dec 2020</span></li>
-                            <li>Technologies - <span>html css</span></li>
-                            <li>Role - <span>frontend</span></li>
-                            <li>Vie - <span><a href="#">www.domain.com</a></span></li>
+                            <li>Tecnologías - <span>HTML, CSS, JavaScript, ReactJS, consumo de API</span></li>
+                            <li>Demo - <span><a href="https://weather-api-app-v1.vercel.app/" target="_blank"> Click aquí.</a></span></li>
                         </ul>
                     </div>
 
                 </div>
 
                 <div class="work__card">
-                    <img src="/assets/work-3.webp" alt="" class="work__img">
-                    <h3 class="work__title">Brand Design</h3>
+                    <img src="/assets/landing-page.png" alt="" class="work__img">
+                    <h3 class="work__title">Landing Page</h3>
                     <span class="work__button">Demo
                         <i class="uil uil-arrow-right work__button-icon"></i>
                     </span>
                     <div class="portfolio__item-details">
-                        <h3 class="details__title">Logo design creativity & Application</h3>
-                        <p class="details__description">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                            Excepturi tempora accusamus atque.</p>
+                        <h3 class="details__title">Landing Page</h3>
+                        <p class="details__description">Landing page de una tienda de ropa altamente receptiva, cuenta con animaciones de transición suaves entre diferentes secciones y contenido gráfico de alta calidad. Con su diseño elegante y moderno, incluyendo modo oscuro, todo en una sola página además de ser totalmente responsive.</p>
                         <ul class="details__info">
-                            <li>Created - <span>4 dec 2020</span></li>
-                            <li>Technologies - <span>html css</span></li>
-                            <li>Role - <span>frontend</span></li>
-                            <li>Vie - <span><a href="#">www.domain.com</a></span></li>
+                            <li>Technologies - <span>HTML, CSS, JavaScript, SwiperJS, ScrollRevealJs
+                            </span></li>
+                            <li>Link - <span><a href="https://landing-page-cloth.vercel.app/" target="_blank"> Click aquí.</a></span></li>
                         </ul>
                     </div>
 
                 </div>
 
-                <div class="work__card">
-                    <img src="/assets/work-4.webp" alt="" class="work__img">
-                    <h3 class="work__title">App Design</h3>
-                    <span class="work__button">Demo
-                        <i class="uil uil-arrow-right work__button-icon"></i>
-                    </span>
-                    <div class="portfolio__item-details">
-                        <h3 class="details__title">Mobile app landing design & Services</h3>
-                        <p class="details__description">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                            Excepturi tempora accusamus atque.</p>
-                        <ul class="details__info">
-                            <li>Created - <span>4 dec 2020</span></li>
-                            <li>Technologies - <span>html css</span></li>
-                            <li>Role - <span>frontend</span></li>
-                            <li>Vie - <span><a href="#">www.domain.com</a></span></li>
-                        </ul>
-                    </div>
-
-                </div>
-
-                <div class="work__card">
-                    <img src="/assets/work-5.webp" alt="" class="work__img">
-                    <h3 class="work__title">Brand Design</h3>
-                    <span class="work__button">Demo
-                        <i class="uil uil-arrow-right work__button-icon"></i>
-                    </span>
-                    <div class="portfolio__item-details">
-                        <h3 class="details__title">Design for technology & services</h3>
-                        <p class="details__description">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                            Excepturi tempora accusamus atque.</p>
-                        <ul class="details__info">
-                            <li>Created - <span>4 dec 2020</span></li>
-                            <li>Technologies - <span>html css</span></li>
-                            <li>Role - <span>frontend</span></li>
-                            <li>Vie - <span><a href="#">www.domain.com</a></span></li>
-                        </ul>
-                    </div>
-
-                </div>
-
-                <div class="work__card">
-                    <img src="/assets/work-6.webp" alt="" class="work__img">
-                    <h3 class="work__title">Web Design</h3>
-                    <span class="work__button">Demo
-                        <i class="uil uil-arrow-right work__button-icon"></i>
-                    </span>
-                    <div class="portfolio__item-details">
-                        <h3 class="details__title">App for tecnology & services</h3>
-                        <p class="details__description">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                            Excepturi tempora accusamus atque.</p>
-                        <ul class="details__info">
-                            <li>Created - <span>4 dec 2020</span></li>
-                            <li>Technologies - <span>html css</span></li>
-                            <li>Role - <span>frontend</span></li>
-                            <li>Vie - <span><a href="#">www.domain.com</a></span></li>
-                        </ul>
-                    </div>
 
                 </div>
             </div>
@@ -367,7 +304,6 @@
                         <img src="assets/work-2.webp" alt="" class="portfolio__popup-img">
                     </div>
                     <div class="portfolio__popup-info">
-                        <div class="portfolio__popup-subtitle">Featured - <span>Design</span></div>
                         <div class="portfolio__popup-body">
                             <h3 class="details__title">The services provide for design</h3>
                             <p class="details__description">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
@@ -376,7 +312,7 @@
                                 <li>Created - <span>4 dec 2020</span></li>
                                 <li>Technologies - <span>html css</span></li>
                                 <li>Role - <span>frontend</span></li>
-                                <li>Vie - <span><a href="#">www.domain.com</a></span></li>
+                                <li>Vie - <span><a href="https://real-state-raul.vercel.app/">https://real-state-raul.vercel.app/</a></span></li>
                             </ul>
                         </div>
                     </div>
