--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
                 <div class="about__data">
                     <h3 class="about__heading">Hola, soy Raúl Ochoa</h3>
-                    <p class="about__description">Un desarrollador Full Stack de Venezuela. Tengo experiencia en el desarrollo tanto del frontend como del backend de aplicaciones web, utilizando herramientas como React, Node.js y MongoDB. <br> <br>Mi pasión por la tecnología comenzó desde muy joven y me llevó a explorar diferentes lenguajes de programación y tecnologías. Actualmente, estoy en proceso de graduarme en Derecho, lo que me ha ayudado a desarrollar habilidades analíticas y de resolución de problemas que aplico en mi carrera como desarrollador. <br><br> Mi objetivo como desarrollador es crear aplicaciones web atractivas, eficientes y escalables, que brinden soluciones efectivas a problemas reales. Mi experiencia en el stack MERN me permite abordar proyectos de manera integral y brindar soluciones completas a los problemas.<br><br>¡Gracias por visitar mi sitio web! Si estás buscando un desarrollador Full Stack para tu proyecto, no dudes en contactarme.</p>
+                    <p class="about__description">Un desarrollador Full Stack de Venezuela. Tengo experiencia en el desarrollo tanto del frontend como del backend de aplicaciones web, utilizando herramientas como React, Tailwind, Sass, Node.js, Express y MongoDB. <br><br>Mi pasión por la tecnología comenzó desde muy joven y me llevó a explorar diferentes lenguajes de programación y tecnologías. Actualmente, estoy en proceso de graduarme en Derecho, lo que me ha ayudado a desarrollar habilidades analíticas y de resolución de problemas que aplico en mi carrera como desarrollador. <br><br> Mi objetivo como desarrollador es crear aplicaciones web atractivas, eficientes y escalables, que brinden soluciones efectivas a problemas reales. Mi experiencia en tecnologías de Frontend y Backend me permiten abordar proyectos de manera integral y brindar soluciones completas a los problemas.<br><br>¡Gracias por visitar mi sitio web! Si estás buscando un desarrollador Full Stack para tu proyecto, no dudes en contactarme.</p>
                     <a href="#contact" id="contact" class="button" class="uil uil-navigator button__icon">Contáctame</a>
                 </div>
             </div>
@@ -165,6 +165,16 @@
                             <div class="skills__data">
                                 <div class="skills__titles">
                                     <h3 class="skills__name">Tailwind CSS</h3>
+                                </div>
+
+                                <div class="skills__bar">
+                                    <span class="skills__percentage" style="width: 100%"></span>
+                                </div>
+                            </div>
+
+                            <div class="skills__data">
+                                <div class="skills__titles">
+                                    <h3 class="skills__name">Sass/h3>
                                 </div>
 
                                 <div class="skills__bar">
