--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 
                             <div class="skills__data">
                                 <div class="skills__titles">
-                                    <h3 class="skills__name">Sass/h3>
+                                    <h3 class="skills__name">Sass</h3>
                                 </div>
 
                                 <div class="skills__bar">
