Add project ecommerce

--- a/index.html
+++ b/index.html
@@ -248,6 +248,24 @@
 
 
             <div class="work__container container grid">
+
+                <div class="work__card">
+                    <img src="/assets/ecommerce.png" alt="" class="work__img">
+                    <h3 class="work__title">Fake Store - Website</h3>
+                    <span class="work__button">Demo
+                        <i class="uil uil-arrow-right work__button-icon"></i>
+                    </span>
+                    <div class="portfolio__item-details">
+                        <h3 class="details__title">Fake Store - Website</h3>
+                        <p class="details__description">Este sitio web fue creado utilizando una Fake Store API para simular una tienda en línea funcional. La API proporcionó datos en tiempo real para los productos, precios, imágenes y descripciones de los productos, lo que permitió una experiencia de usuario más realista y auténtica.</p>
+                        <ul class="details__info">
+                            <li>Tecnologías - <span>HTML, CSS, tailwind CSS, JavaScript, ReactJS</span></li>
+                            <li>Demo - <span><a href="https://ecommerce-raul.vercel.app//" target="_blank"> Click aquí.</a></span></li>
+                        </ul>
+                    </div>
+
+                </div>
+
                 <div class="work__card">
                     <img src="/assets/real-state.png" alt="" class="work__img">
                     <h3 class="work__title">Real State App - Website</h3>
