fix: change details to About

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
                         <li class="nav__item">
                             <a href="#skills" class="nav__link">Habilidades</a>
                         </li>
-                        <li class="nav__item">
+                        <!-- <li class="nav__item">
                             <a href="#work" class="nav__link">Portafolio</a>
-                        </li>
+                        </li> -->
                     </ul>
                 </div>
             </div>
@@ -71,7 +71,7 @@
                 <div class="home__container-data">
                 <div class="home__data">
                     <h1 class="home__title">Hola, soy Raúl</h1>
-                    <h3 class="home__subtitle">Full Stack Developer</h3>
+                    <h3 class="home__subtitle">Software Developer</h3>
                     <a href="#about" class="button">
                         <i class='uil uil-user button__icon'></i>
                         Sobre mí.
@@ -95,7 +95,7 @@
 
                 <div class="about__data">
                     <h3 class="about__heading">Hola, soy Raúl Ochoa</h3>
-                    <p class="about__description">Un desarrollador Full Stack de Venezuela. Tengo experiencia en el desarrollo tanto del frontend como del backend de aplicaciones web, utilizando herramientas como React, Tailwind, Sass, Node.js, Express y MongoDB. <br><br>Mi pasión por la tecnología comenzó desde muy joven y me llevó a explorar diferentes lenguajes de programación y tecnologías. Actualmente, estoy en proceso de graduarme en Derecho, lo que me ha ayudado a desarrollar habilidades analíticas y de resolución de problemas que aplico en mi carrera como desarrollador. <br><br> Mi objetivo como desarrollador es crear aplicaciones web atractivas, eficientes y escalables, que brinden soluciones efectivas a problemas reales. Mi experiencia en tecnologías de Frontend y Backend me permiten abordar proyectos de manera integral y brindar soluciones completas a los problemas.<br><br>¡Gracias por visitar mi sitio web! Si estás buscando un desarrollador Full Stack para tu proyecto, no dudes en contactarme.</p>
+                    <p class="about__description">Un Software Developer de Venezuela. Tengo experiencia en el desarrollo tanto del frontend como del backend de aplicaciones web, utilizando herramientas como React, Next.js, Tailwind, Sass, Node.js, Express y MongoDB. <br><br>Mi pasión por la tecnología comenzó desde muy joven y me llevó a explorar diferentes lenguajes de programación y tecnologías. Actualmente, estoy en proceso de graduarme en Derecho, lo que me ha ayudado a desarrollar habilidades analíticas y de resolución de problemas que aplico en mi carrera como desarrollador. <br><br> Mi objetivo como desarrollador es crear aplicaciones web atractivas, eficientes y escalables, que brinden soluciones efectivas a problemas reales. Mi experiencia en tecnologías de Frontend y Backend me permiten abordar proyectos de manera integral y brindar soluciones completas a los problemas.<br><br>¡Gracias por visitar mi sitio web! Si estás buscando un Software Developer para tu proyecto, no dudes en contactarme.</p>
                     <a href="#contact" id="contact" class="button" class="uil uil-navigator button__icon">Contáctame</a>
                 </div>
             </div>
@@ -201,14 +201,35 @@
                                     <span class="skills__percentage" style="width: 100%"></span>
                                 </div>
                             </div>
+
+                            <div class="skills__data">
+                                <div class="skills__titles">
+                                    <h3 class="skills__name">Next.js</h3>
+                                </div>
+
+                                <div class="skills__bar">
+                                    <span class="skills__percentage" style="width: 100%"></span>
+                                </div>
+                            </div>
                         </div>
                     </div>
 
                     <div class="skills__group " data-content id="backend">
                         <div class="skills__list grid">
+
                             <div class="skills__data">
                                 <div class="skills__titles">
-                                    <h3 class="skills__name">NodeJs</h3>
+                                    <h3 class="skills__name">Node.js</h3>
+                                </div>
+
+                                <div class="skills__bar">
+                                    <span class="skills__percentage" style="width: 100%"></span>
+                                </div>
+                            </div>
+
+                            <div class="skills__data">
+                                <div class="skills__titles">
+                                    <h3 class="skills__name">Express.js</h3>
                                 </div>
 
                                 <div class="skills__bar">
