fix: change language to english

--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
                 <div class="menu">
                     <ul class="nav__list">
                         <li class="nav__item">
-                            <a href="#home" class="nav__link active-link">Inicio</a>
+                            <a href="#home" class="nav__link active-link">Home</a>
                         </li>
                         <li class="nav__item">
-                            <a href="#about" class="nav__link">Sobre mí</a>
+                            <a href="#about" class="nav__link">About me</a>
                         </li>
                         <li class="nav__item">
-                            <a href="#skills" class="nav__link">Habilidades</a>
+                            <a href="#skills" class="nav__link">Skills</a>
                         </li>
                         <!-- <li class="nav__item">
                             <a href="#work" class="nav__link">Portafolio</a>
@@ -70,11 +70,11 @@
 
                 <div class="home__container-data">
                 <div class="home__data">
-                    <h1 class="home__title">Hola, soy Raúl</h1>
+                    <h1 class="home__title">Hi, I'm Raul</h1>
                     <h3 class="home__subtitle">Software Developer</h3>
                     <a href="#about" class="button">
                         <i class='uil uil-user button__icon'></i>
-                        Sobre mí.
+                        About me
                     </a>
                 </div>
 
@@ -88,15 +88,15 @@
 
         <!-- ABOUT -->
         <section class="about section" id="about">
-            <h2 class="section__title">Sobre mí</h2>
+            <h2 class="section__title">About me</h2>
 
             <div class="about__container container grid">
                 <img src="assets/laptop-image.png" alt="" class="about__img">
 
                 <div class="about__data">
-                    <h3 class="about__heading">Hola, soy Raúl Ochoa</h3>
-                    <p class="about__description">Un Software Developer de Venezuela. Tengo experiencia en el desarrollo tanto del frontend como del backend de aplicaciones web, utilizando herramientas como React, Next.js, Tailwind, Sass, Node.js, Express y MongoDB. <br><br>Mi pasión por la tecnología comenzó desde muy joven y me llevó a explorar diferentes lenguajes de programación y tecnologías. Actualmente, estoy en proceso de graduarme en Derecho, lo que me ha ayudado a desarrollar habilidades analíticas y de resolución de problemas que aplico en mi carrera como desarrollador. <br><br> Mi objetivo como desarrollador es crear aplicaciones web atractivas, eficientes y escalables, que brinden soluciones efectivas a problemas reales. Mi experiencia en tecnologías de Frontend y Backend me permiten abordar proyectos de manera integral y brindar soluciones completas a los problemas.<br><br>¡Gracias por visitar mi sitio web! Si estás buscando un Software Developer para tu proyecto, no dudes en contactarme.</p>
-                    <a href="#contact" id="contact" class="button" class="uil uil-navigator button__icon">Contáctame</a>
+                    <h3 class="about__heading">Hi, I'm Raúl Ochoa</h3>
+                    <p class="about__description">A Software Developer from Venezuela. I have experience in both frontend and backend development of web applications, using tools such as React, Next.js, Tailwind, Sass, Node.js, Express and MongoDB. <br><br> My passion for technology started at a very young age and led me to explore different programming languages and technologies. Currently, I am in the process of graduating in Law, which has helped me develop analytical and problem solving skills that I apply in my career as a developer.<br><br> My goal as a developer is to create attractive, efficient and scalable web applications that provide effective solutions to real problems. My experience in Frontend and Backend technologies allows me to approach projects in a comprehensive way and provide complete solutions to problems.<br><br>Thanks for visiting my website! If you are looking for a Software Developer for your project, don't hesitate to contact me.</p>
+                    <a href="#contact" id="contact" class="button" class="uil uil-navigator button__icon">Contact me</a>
                 </div>
             </div>
         </section>
@@ -104,7 +104,7 @@
         <!-- Skills -->
 
         <section class="skills section" id="skills">
-            <h2 data-heading="Mis habilidades" class="section__title">Mi experiencia</h2>
+            <h2 data-heading="Mis habilidades" class="section__title">My experience</h2>
 
             <div class="skills__container container grid">
 
@@ -278,10 +278,10 @@
                     </span>
                     <div class="portfolio__item-details">
                         <h3 class="details__title">Fake Store - Website</h3>
-                        <p class="details__description">Este sitio web fue creado utilizando una Fake Store API para simular una tienda en línea funcional. La API proporcionó datos en tiempo real para los productos, precios, imágenes y descripciones de los productos, lo que permitió una experiencia de usuario más realista y auténtica.</p>
+                        <p class="details__description">This website was created using a Fake Store API to simulate a functional online store. The API provided real-time data for products, prices, images and product descriptions, allowing for a more realistic and authentic user experience.</p>
                         <ul class="details__info">
-                            <li>Tecnologías - <span>HTML, CSS, tailwind CSS, JavaScript, ReactJS</span></li>
-                            <li>Demo - <span><a href="https://ecommerce-raul.vercel.app//" target="_blank"> Click aquí.</a></span></li>
+                            <li>Technologies - <span>HTML, CSS, tailwind CSS, JavaScript, ReactJS</span></li>
+                            <li>Demo - <span><a href="https://ecommerce-raul.vercel.app//" target="_blank">Click here.</a></span></li>
                         </ul>
                     </div>
 
@@ -295,10 +295,10 @@
                     </span>
                     <div class="portfolio__item-details">
                         <h3 class="details__title">Real State App - Website</h3>
-                        <p class="details__description">La aplicación permite a los usuarios buscar, explorar y ver detalles de diferentes propiedades, incluyendo fotos, precio ytipo de propieda. Los usuarios pueden filtrar sus búsquedas por diferentes criterios, como precio y tipo de propiedad.</p>
+                        <p class="details__description">The application allows users to search, browse and view details of different properties, including photos, price and property type. Users can filter their searches by different criteria, such as price and property type.</p>
                         <ul class="details__info">
-                            <li>Tecnologías - <span>HTML, CSS, tailwind CSS, JavaScript, ReactJS</span></li>
-                            <li>Demo - <span><a href="https://real-state-raul.vercel.app/" target="_blank"> Click aquí.</a></span></li>
+                            <li>Technologies - <span>HTML, CSS, tailwind CSS, JavaScript, ReactJS</span></li>
+                            <li>Demo - <span><a href="https://real-state-raul.vercel.app/" target="_blank">Click here</a></span></li>
                         </ul>
                     </div>
 
@@ -312,11 +312,11 @@
                     </span>
                     <div class="portfolio__item-details">
                         <h3 class="details__title">Landing Page</h3>
-                        <p class="details__description">Landing page de una tienda de ropa altamente receptiva, cuenta con animaciones de transición suaves entre diferentes secciones y contenido gráfico de alta calidad. Con su diseño elegante y moderno, incluyendo modo oscuro, todo en una sola página además de ser totalmente responsive.</p>
+                        <p class="details__description">The website is a highly responsive apparel store's landing page, featuring smooth transition animations between different sections and high quality graphic content. With its sleek and modern design, including dark mode, all on a single page as well as being fully responsive.</p>
                         <ul class="details__info">
                             <li>Technologies - <span>HTML, CSS, JavaScript, SwiperJS, ScrollRevealJs
                             </span></li>
-                            <li>Link - <span><a href="https://landing-page-cloth.vercel.app/" target="_blank"> Click aquí.</a></span></li>
+                            <li>Link - <span><a href="https://landing-page-cloth.vercel.app/" target="_blank"> Click here.</a></span></li>
                         </ul>
                     </div>
 
@@ -355,7 +355,7 @@
             <div class="footer__bg">
                 <div class="footer__container container grid">
                     <div>
-                        <p>© 2023 - Desarrollado por Raul Ochoa</p>
+                        <p>© 2023 - Developed by Raul Ochoa</p>
                     </div>
 
                     <div class="footer__socials">
