fix: fix details

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         <!-- Skills -->
 
         <section class="skills section" id="skills">
-            <h2 data-heading="Mis habilidades" class="section__title">My experience</h2>
+            <h2 class="section__title">My experience</h2>
 
             <div class="skills__container container grid">
 
@@ -265,7 +265,7 @@
 
         <!-- WORK -->
         <section class="work section" id="work">
-            <h2 data-heading="Mi portafolio" class="section__title">Trabajos recientes</h2>
+            <h2 class="section__title">Recent works</h2>
 
 
             <div class="work__container container grid">
