feat: add new project

--- a/index.html
+++ b/index.html
@@ -270,14 +270,47 @@
 
             <div class="work__container container grid">
 
+
                 <div class="work__card">
-                    <img src="/assets/ecommerce.png" alt="" class="work__img">
-                    <h3 class="work__title">Fake Store - Website</h3>
+                    <img src="/assets/real-state.png" alt="" class="work__img">
+                    <h3 class="work__title">Real State App</h3>
                     <span class="work__button">Demo
                         <i class="uil uil-arrow-right work__button-icon"></i>
                     </span>
                     <div class="portfolio__item-details">
-                        <h3 class="details__title">Fake Store - Website</h3>
+                        <h3 class="details__title">Real State App</h3>
+                        <p class="details__description">The application allows users to search, browse and view details of different properties, including photos, price and property type. Users can filter their searches by different criteria, such as price and property type.</p>
+                        <ul class="details__info">
+                            <li>Technologies - <span>HTML, CSS, tailwind CSS, JavaScript, ReactJS</span></li>
+                            <li>Demo - <span><a href="https://real-state-raul.vercel.app/" target="_blank">Click here</a></span></li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="work__card">
+                    <img src="/assets/car-shop.png" alt="" class="work__img">
+                    <h3 class="work__title">Car Shop App</h3>
+                    <span class="work__button">Demo
+                        <i class="uil uil-arrow-right work__button-icon"></i>
+                    </span>
+                    <div class="portfolio__item-details">
+                        <h3 class="details__title">Car Shop App</h3>
+                        <p class="details__description">The Car Shop App developed with Next.js offers users the ability to browse, search and view details of various vehicles, including photographs, prices and vehicle types. Users have the functionality to filter their searches according to different criteria, vehicle type, fuel type and year making it easy to locate options that fit their preferences and needs.  With Next.js, the Car Shop application ensures optimal performance and fast response, enhancing the overall online car shopping experience.</p>
+                        <ul class="details__info">
+                            <li>Technologies - <span>HTML, CSS, tailwind CSS, JavaScript, Next.js</span></li>
+                            <li>Demo - <span><a href="https://car-shop-v1.vercel.app/" target="_blank">Click here</a></span></li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="work__card">
+                    <img src="/assets/ecommerce.png" alt="" class="work__img">
+                    <h3 class="work__title">Fake Store</h3>
+                    <span class="work__button">Demo
+                        <i class="uil uil-arrow-right work__button-icon"></i>
+                    </span>
+                    <div class="portfolio__item-details">
+                        <h3 class="details__title">Fake Store</h3>
                         <p class="details__description">This website was created using a Fake Store API to simulate a functional online store. The API provided real-time data for products, prices, images and product descriptions, allowing for a more realistic and authentic user experience.</p>
                         <ul class="details__info">
                             <li>Technologies - <span>HTML, CSS, tailwind CSS, JavaScript, ReactJS</span></li>
@@ -287,24 +320,7 @@
 
                 </div>
 
-                <div class="work__card">
-                    <img src="/assets/real-state.png" alt="" class="work__img">
-                    <h3 class="work__title">Real State App - Website</h3>
-                    <span class="work__button">Demo
-                        <i class="uil uil-arrow-right work__button-icon"></i>
-                    </span>
-                    <div class="portfolio__item-details">
-                        <h3 class="details__title">Real State App - Website</h3>
-                        <p class="details__description">The application allows users to search, browse and view details of different properties, including photos, price and property type. Users can filter their searches by different criteria, such as price and property type.</p>
-                        <ul class="details__info">
-                            <li>Technologies - <span>HTML, CSS, tailwind CSS, JavaScript, ReactJS</span></li>
-                            <li>Demo - <span><a href="https://real-state-raul.vercel.app/" target="_blank">Click here</a></span></li>
-                        </ul>
-                    </div>
-
-                </div>
-
-                <div class="work__card">
+                <div class="work__card landing__card">
                     <img src="/assets/landing-page.png" alt="" class="work__img">
                     <h3 class="work__title">Landing Page</h3>
                     <span class="work__button">Demo
